--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -388,7 +388,7 @@
 
     - name: 'Bonus #2 : Setup wordpress with wp-cli'
       ansible.builtin.command:
-        cmd: "/usr/local/bin/wp core install - url=http://42bonus.wp - title=42bonus.wp - admin_user=admin — admin_password=admin — admin_email=abenamar@student.42.fr"
+        cmd: "/usr/bin/sudo -u abenamar -i -- /usr/local/bin/wp core install --url=http://42bonus.wp --title=42bonus.wp --admin_user=admin —-admin_password=admin —-admin_email=abenamar@student.42.fr"
 
     - name: 'Remove useless packages from the cache'
       ansible.builtin.apt:
