--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -390,8 +390,12 @@
       ansible.builtin.command:
         argv: 
           - /usr/bin/sudo 
-          - -u abenamar -i --
-          - /usr/local/bin/wp core install
+          - -u abenamar
+          - -i
+          - --
+          - /usr/local/bin/wp
+          - core
+          - install
           - --path=/var/www/html/42bonus.wp
           - --url=http://42bonus.wp
           - --title=42bonus.wp
