--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -390,7 +390,8 @@
       ansible.builtin.command:
         argv: 
           - /usr/bin/sudo 
-          - -u abenamar
+          - -u
+          - abenamar
           - -i
           - --
           - /usr/local/bin/wp
