--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -305,9 +305,9 @@
         - "DELETE FROM mysql.user WHERE User=''"
         - "DELETE FROM mysql.user WHERE User='root' AND Host NOT IN ('localhost', '127.0.0.1', '::1')"
         - "DROP DATABASE IF EXISTS test"
-        - "DELETE FROM mysql.db WHERE Db='test' OR Db='test\\\\_%'"
+        - "DELETE FROM mysql.db WHERE Db='test' OR Db='test\\_%'"
         - "CREATE DATABASE wordpress"
-        - "GRANT ALL PRIVILEGES on wordpress.* TO 'wordpress_user'@'localhost' IDENTIFIED BY 'wordpress_pss123'"
+        - "GRANT ALL PRIVILEGES on wordpress.* TO 'wordpress_user'@'localhost' IDENTIFIED BY ''"
         - "FLUSH PRIVILEGES"
 
     - name: 'Bonus #2 : Restart mysql service'
@@ -318,20 +318,14 @@
     - name: 'Bonus #2 : Download wordpress archive in /tmp'
       ansible.builtin.get_url:
         url: https://wordpress.org/latest.tar.gz
-        dest: /tmp/latest.tar.gz
+        dest: /tmp/wordpress.tar.gz
 
     - name: 'Bonus #2 : Extract wordpress archive and move it to /var/www/html'
       ansible.builtin.command:
         cmd: "{{ item }}"
       loop:
-        - '/usr/bin/tar -xvzf /tmp/latest.tar.gz --directory /var/www/html'
-        - '/usr/bin/mv /var/www/html/wordpress/wp-config-sample.php /var/www/html/wordpress/wp-config.php'
-        - '/usr/bin/mv /var/www/html/wordpress/ /var/www/html/42bonus.wp'
-
-    - name: 'Bonus #2 : Delete wordpress archive from /tmp'
-      ansible.builtin.file:
-        path: /tmp/latest.tar.gz
-        state: absent
+        - '/usr/bin/tar -xvzf /tmp/wordpress.tar.gz --directory /var/www/html'
+        - '/usr/bin/mv /var/www/html/wordpress/ /var/www/html/abenamar.42.bonus'
 
     - name: 'Bonus #2 : Ensure /var/www/html has recursively correct ownership and rights'
       ansible.builtin.file:
@@ -352,16 +346,16 @@
         path: /etc/lighttpd/lighttpd.conf
         line: 'include_shell "cat /etc/lighttpd/vhosts.d/*.conf"'
 
-    - name: 'Bonus #2 : Create /etc/lighttpd/vhosts.d/42bonus.wp.conf'
+    - name: 'Bonus #2 : Create /etc/lighttpd/vhosts.d/abenamar.42.bonus.conf'
       ansible.builtin.lineinfile:
-        path: /etc/lighttpd/vhosts.d/42bonus.wp.conf
+        path: /etc/lighttpd/vhosts.d/abenamar.42.bonus.conf
         line: "{{ item }}"
         create: yes
       loop:
-        - '$HTTP["host"] =~ "(^|.)42bonus.wp$" {'
-        - 'server.document-root = "/var/www/html/42bonus.wp"'
-        - 'server.errorlog = "/var/log/lighttpd/42bonus.wp-error.log"'
-        - 'accesslog.filename = "/var/log/lighttpd/42bonus.wp-access.log"'
+        - '$HTTP["host"] =~ "(^|.)abenamar.42.bonus$" {'
+        - 'server.document-root = "/var/www/html/abenamar.42.bonus"'
+        - 'server.errorlog = "/var/log/lighttpd/abenamar.42.bonus-error.log"'
+        - 'accesslog.filename = "/var/log/lighttpd/abenamar.42.bonus-access.log"'
         - 'url.rewrite-final = ("^/(.*.php)" => "$0", "^/(.*)$" => "/index.php/$1" )'
         - '}'
 
@@ -369,16 +363,6 @@
       ansible.builtin.service:
         name: lighttpd
         state: restarted
-
-    - name: 'Bonus #2 :Edit /var/www/html/42bonus.wp/wp-config.php'
-      ansible.builtin.lineinfile:
-        path: /var/www/html/42bonus.wp/wp-config.php
-        regexp: "{{ item.key }}"
-        line: "{{ item.value }}"
-      loop:
-        - { key: 'database_name_here', value: 'wordpress' }
-        - { key: 'username_here', value: 'wordpress_user' }
-        - { key: 'password_here', value: 'wordpress_pss123' }
 
     - name: 'Bonus #2 : Download wp-cli in /usr/local/bin'
       ansible.builtin.get_url:
@@ -396,10 +380,9 @@
           - /usr/local/bin/wp
           - core
           - config
-          - --path=/var/www/html/42bonus.wp
+          - --path=/var/www/html/abenamar.42.bonus
           - --dbname=wordpress
           - --dbuser=wordpress_user
-          - --dbpass=wordpress_pss123
 
     - name: 'Bonus #2 : Install wordpress with wp-cli'
       ansible.builtin.command:
@@ -411,12 +394,47 @@
           - /usr/local/bin/wp
           - core
           - install
-          - --path=/var/www/html/42bonus.wp
-          - --url=http://localhost/42bonus.wp
-          - --title=42bonus.wp
+          - --path=/var/www/html/abenamar.42.bonus
+          - --url=http://localhost/abenamar.42.bonus
+          - --title=abenamar.42.bonus
           - --admin_user=admin
           - —-admin_password=admin
           - —-admin_email=abenamar@student.42.fr
+
+    - name: 'Bonus #3.1 : Install fail2ban package'
+      apt:
+        name: fail2ban
+
+    - name: 'Bonus #3.1 : Edit fail2ban jail custom conf settings'
+      lineinfile:
+        path: /etc/fail2ban/jail.d/custom.conf
+        line: "{{ item }}"
+        create: yes
+      with_items:
+        - '[DEFAULT]'
+        - 'bantime = 72h'
+        - 'findtime = 15m'
+        - 'maxretry = 3'
+        - ''
+        - '[sshd]'
+        - 'enabled = true'
+        - 'port = 1252'
+        - 'maxretry = 5'
+
+    - name: 'Bonus #3.1 : Restart fail2ban service'
+      service:
+        name: fail2ban
+        state: restarted
+
+    - name: 'Bonus #3.2 : Download docker convenience script in /tmp'
+      ansible.builtin.get_url:
+        url: https://get.docker.com
+        dest: /tmp/get-docker.sh
+        mode: '0755'
+
+    - name: 'Bonus #3.2 : Install docker engine'
+      ansible.builtin.command:
+        cmd: '/tmp/get-docker.sh'
 
     - name: 'Remove useless packages from the cache'
       ansible.builtin.apt:
