--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -372,6 +372,7 @@
 
     - name: 'Bonus #2 : Config wordpress with wp-cli'
       ansible.builtin.command:
+        chdir: /var/www/html/abenamar.42.bonus
         argv: 
           - /usr/bin/sudo
           - -u
@@ -380,13 +381,13 @@
           - /usr/local/bin/wp
           - core
           - config
-          - --path='/var/www/html/abenamar.42.bonus'
           - --dbname='wordpress'
           - --dbuser='wordpress_user'
           - --dbpass='wordpress_pass'
 
     - name: 'Bonus #2 : Install wordpress with wp-cli'
       ansible.builtin.command:
+        chdir: /var/www/html/abenamar.42.bonus
         argv: 
           - /usr/bin/sudo
           - -u
@@ -395,7 +396,6 @@
           - /usr/local/bin/wp
           - core
           - install
-          - --path='/var/www/html/abenamar.42.bonus'
           - --url='http://localhost/abenamar.42.bonus'
           - --title='abenamar.42.bonus'
           - --admin_user='admin'
